@@ -98,6 +98,7 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
       don't get full any more.
     - Make dns_resolve handle attaching connections to circuits properly,
       so the caller doesn't have to.
+    - Rename wants_to_read and wants_to_write to read/write_blocked_on_bw.
 
 Changes in version 0.1.2.12-rc - 2007-03-16
   o Major bugfixes:
